deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
spec:
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver
        image: nginx:1.20-alpine
        volumeMounts:
          - name: index-html
            mountPath: /usr/share/nginx/html
        resources:
          limits:
            memory: "50Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
        readinessProbe:
          initialDelaySeconds: 30
          httpGet:
            path: /
            port: 80
      volumes:
        - name: index-html
          configMap:
            name: index-html
            items:
              - key: index-html
                path: index.html
