service.yml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  selector:
    app: webserver
  type: ClusterIP
  ports:
  - port: 80
    name: http
