route.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver
  labels:
    name: webserver
spec:
  rules:
    - http:
        paths:
        - pathType: Exact
          path: /index.html
          backend:
            service:
              name: webserver
              port: 
                number: 80
